Fix bad truncated text in job ref opt values shown in workflows

--- a/rundeckapp/grails-app/assets/stylesheets/rundeck.less
+++ b/rundeckapp/grails-app/assets/stylesheets/rundeck.less
@@ -1005,7 +1005,7 @@ section{
 
 
 //option values in code sections
-code.optvalue{
+.optvalue{
   color: @brand-primary;
   background-color: @gray-lighter;
 }
